# mcp_agent_linker

./: README.md  pyproject.toml
src/mcp_agent_linker/: __init__.py  agent.py  loader.py
src/mcp_agent_linker/models/: __init__.py  task_input.py
src/mcp_broker/: __init__.py  agent.py  loader.py  parser.py  tool.py
src/mcp_broker/models/: agent_def.py  skill.py
tests/: food_agent_server.py  test_agent.py  test_loader.py
